New bash scripts

--- a/templates/install-config-base.yaml.j2
+++ b/templates/install-config-base.yaml.j2
@@ -20,5 +20,5 @@ networking:
 platform:
   none: {}
 fips: false
-pullSecret: '$(< ~/.openshift/pull-secret)'
-sshKey: '$(< ~/.ssh/id_rsa.pub)'
+pullSecret: 'paste-as-obtained-from-https://cloud.redhat.com'
+sshKey: 'PASTE-SSH-PUBLIC-KEY'
