--- a/templates/pull-secret.j2
+++ b/templates/pull-secret.j2
@@ -1,1 +1,1 @@
-#Visit cloud.redhat.com and download your pull secret and save it 
+#Download from Redhat https://console.redhat.com/openshift/overview
